--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,6 @@ services:
     volumes:
       - ~/.composer-docker/cache:/root/.composer/cache:delegated
       - ./:/app:delegated
-    depends_on:
-      - db
     ports:
       - '8080:80'
 
@@ -15,18 +13,26 @@ services:
     image: mysql:latest
     ports:
     - "3307:3306"
+    volumes:
+      - ./mysql:/etc/mysql/conf.d
+    networks:
+      - php
     environment:
         MYSQL_ROOT_PASSWORD: Password123#@!
         MYSQL_DATABASE: cicd
-        MYSQL_USER: bazengadaddy
-        MYSQL_PASSWORD: Password123#@!
 
   phpmyadmin:
-    image: phpmyadmin:latest
+    image: phpmyadmin/phpmyadmin
     restart: always
     environment:
+      PMA_PORT: 3306
+      PMA_HOST: db
       PMA_USER: bazengadaddy
       PMA_PASSWORD: Password123#@!
       UPLOAD_LIMIT: 3000000000
     ports:
       - "8000:80"
+    depends_on:
+      - db
+    networks:
+      - php
