--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,10 @@ services:
       - ./:/app:delegated
     ports:
       - '8080:80'
-    links:
+    depends_on:
       - db
-
   db:
     image: mysql:latest
-    ports:
-    - "3307:3306"
     volumes:
       - ./mysql:/etc/mysql/conf.d
     environment:
@@ -25,6 +22,7 @@ services:
     image: phpmyadmin/phpmyadmin
     restart: always
     environment:
+      PMA_PORT: 3306
       PMA_HOST: db
       PMA_USER: bazengadaddy
       PMA_PASSWORD: Password123#@!
