--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,12 @@ version: '2'
 services:
   web:
     image: yiisoftware/yii2-php:7.2-apache
-    build: ./
+    build: .
     volumes:
       - ~/.composer-docker/cache:/root/.composer/cache:delegated
       - ./:/app:delegated
     ports:
       - '8080:80'
-    depends_on:
-      - db
   db:
     image: mysql:latest
     volumes:
