--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,15 @@
-version: '2'
+version: '3'
 services:
   web:
-    image: yiisoftware/yii2-php:7.2-apache
     build: ./
+    container_name: cicd_web
     volumes:
-      - ~/.composer-docker/cache:/root/.composer/cache:delegated
-      - ./:/app:delegated
+      - .:/var/www/html
     ports:
       - '8080:80'
   db:
-    image: mysql:latest
-    volumes:
-      - ./mysql:/etc/mysql/conf.d
+    image: mysql:8
+    container_name: cicd_db
     environment:
         MYSQL_ROOT_PASSWORD: Password123#@!
         MYSQL_DATABASE: cicd
