--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - '8080:80'
   db:
-    image: mysql:8
+    image: mysql:latest
     container_name: cicd_db
     environment:
         MYSQL_ROOT_PASSWORD: Password123#@!
